--- a/destination.html
+++ b/destination.html
@@ -46,65 +46,65 @@
         </header>
     
     <div class="content">
-        <h2>Cities of Coverage</h2>
+        <h2>Explore Destination</h2>
         <div class="map-and-list-container">
             <div class="map-container">
                 <div class="map-wrapper">
                     <img src="picture/china-map.jpg" alt="Map of China">
                     <!-- Drop points with city names -->
-                    <div class="map-point" style="top: 66.92%; left: 57.14%;">
+                    <div class="map-point" style="top: 64.92%; left: 57.14%;">
                         <a href="city/chongqing.html">Chongqing</a>
                     </div>
-                    <div class="map-point" style="top: 58.81%; left: 77.36%;">
+                    <div class="map-point" style="top: 56.81%; left: 77.36%;">
                         <a href="city/nanjing.html">Nanjing</a>
                     </div>
-                    <div class="map-point" style="top: 80.43%; left: 62.64%;">
+                    <div class="map-point" style="top: 78.43%; left: 62.64%;">
                         <a href="city/guilin.html">Guilin</a>
                     </div>
-                    <div class="map-point" style="top: 72.32%; left: 68.13%;">
+                    <div class="map-point" style="top: 70.32%; left: 68.13%;">
                         <a href="city/changsha.html">Changsha</a>
                     </div>
-                    <div class="map-point" style="top: 62.86%; left: 51.65%;">
+                    <div class="map-point" style="top: 60.86%; left: 51.65%;">
                         <a href="city/chengdu.html">Chengdu</a>
                     </div>
-                    <div class="map-point" style="top: 85.84%; left: 70.33%;">
+                    <div class="map-point" style="top: 83.84%; left: 70.33%;">
                         <a href="city/guangzhou.html">Guangzhou</a>
                     </div>
-                    <div class="map-point" style="top: 65.57%; left: 81.98%;">
+                    <div class="map-point" style="top: 63.57%; left: 81.98%;">
                         <a href="city/hangzhou.html">Hangzhou</a>
                     </div>
-                    <div class="map-point" style="top: 47.00%; left: 81.98%;">
+                    <div class="map-point" style="top: 45.00%; left: 81.98%;">
                         <a href="city/qingdao.html">Qingdao</a>
                     </div>
-                    <div class="map-point" style="top: 61.51%; left: 84.62%;">
+                    <div class="map-point" style="top: 59.51%; left: 84.62%;">
                         <a href="city/shanghai.html">Shanghai</a>
                     </div>
-                    <div class="map-point" style="top: 65.57%; left: 71.43%;">
+                    <div class="map-point" style="top: 63.57%; left: 71.43%;">
                         <a href="city/wuhan.html">Wuhan</a>
                     </div>
-                    <div class="map-point" style="top: 78.59%; left: 80.66%;">
+                    <div class="map-point" style="top: 76.59%; left: 80.66%;">
                         <a href="city/xiamen.html">Xiamen</a>
                     </div>
-                    <div class="map-point" style="top: 54.76%; left: 59.14%;">
+                    <div class="map-point" style="top: 52.76%; left: 59.14%;">
                         <a href="city/xian.html">Xi'an</a>
                     </div>
-                    <div class="map-point" style="top: 39.76%; left: 81.98%;">
+                    <div class="map-point" style="top: 38.76%; left: 81.98%;">
                         <a href="city/dalian.html">Dalian</a>
                     </div>
-                    <div class="map-point" style="top: 69.14%; left: 75.65%;">
+                    <div class="map-point" style="top: 67.14%; left: 75.65%;">
                         <a href="city/jingdezhen.html">Jingdezhen</a>
                     </div>
-                    <div class="map-point" style="top: 69.92%; left: 63.14%;">
+                    <div class="map-point" style="top: 67.92%; left: 63.14%;">
                         <a href="city/zhangjiajie.html">Zhangjiajie</a>
                     </div>
-                    <div class="map-point" style="top: 54.76%; left: 70.33%;">
+                    <div class="map-point" style="top: 52.76%; left: 70.33%;">
                         <a href="city/zhengzhou.html">Zhengzhou</a>
                     </div>  
                 </div>
             </div>
         
             <div class="city-list">
-                <h3>Explore Cities</h3>
+                <h3>List of Cities</h3>
                 <ul>
                     <li><a href="city/chongqing.html">Chongqing</a></li>
                     <li><a href="city/nanjing.html">Nanjing</a></li>
